Run Python unit tests on all platforms

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -6,7 +6,7 @@ setenv = VIRTUAL_ENV={envdir}
 usedevelop = True
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
-commands = python setup.py testr --slowest --testr-args='{posargs}'
+commands = py.test --durations=10 --junit-xml=res{envname}.xml {posargs}
 sitepackages = False
 
 [testenv:pep8]
