--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ add_library(veles_base
     ${INCLUDE_DIR}/util/sampling/fake_sampler.h
     ${INCLUDE_DIR}/util/settings/theme.h
     ${INCLUDE_DIR}/util/settings/hexedit.h
+    ${INCLUDE_DIR}/util/settings/connection_client.h
 
     ${INCLUDE_DIR}/util/encoders/base64_encoder.h
     ${INCLUDE_DIR}/util/encoders/c_data_encoder.h
@@ -83,6 +84,7 @@ add_library(veles_base
     ${SRC_DIR}/util/sampling/fake_sampler.cc
     ${SRC_DIR}/util/settings/theme.cc
     ${SRC_DIR}/util/settings/hexedit.cc
+    ${SRC_DIR}/util/settings/connection_client.cc
 
     ${SRC_DIR}/util/encoders/base64_encoder.cc
     ${SRC_DIR}/util/encoders/c_data_encoder.cc
