Fix contact info

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = veles
-home-page = https://codisec.com/veles/
+home-page = https://veles.io/
 author = CodiSec
-author-email = veles@codisec.com
+author-email = contact@veles.io
 
 [files]
 packages = veles
