Fix contact info in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -430,7 +430,7 @@ endif(WIN32 AND NOT MSVC)
 
 #Unix paths
 if(CMAKE_HOST_UNIX AND NOT CMAKE_HOST_APPLE)
-  set(CPACK_PACKAGE_CONTACT "contact@codisec.com")
+  set(CPACK_PACKAGE_CONTACT "contact@veles.io")
   set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
   set(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5core5a (>= 5.5.1), libqt5gui5 (>= 5.5.1), libqt5widgets5 (>= 5.5.1), libqt5network5 (>= 5.5.1), zlib1g (>= 1:1.2.8), python3 (>= 3.5.0), python3-venv (>= 3.5.0)")
   install(TARGETS main_ui RUNTIME DESTINATION bin COMPONENT "application")
@@ -463,7 +463,7 @@ if(WIN32)
   set(CPACK_PACKAGE_INSTALL_DIRECTORY "Veles")
   set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
   set(CPACK_NSIS_URL_INFO_ABOUT "https://veles.io")
-  set(CPACK_NSIS_CONTACT "contact@codisec.com")
+  set(CPACK_NSIS_CONTACT "contact@veles.io")
   set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/resources/install/license.txt")
   set(CPACK_PACKAGE_EXECUTABLES "veles" "VELES")
   set(CPACK_CREATE_DESKTOP_LINKS "veles")
