Add loading/packing of BinData in C++ code (#184)
Add loading/packing of BinData in C++ code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ add_library(veles_base
     ${INCLUDE_DIR}/util/encoders/text_encoder.h
     ${INCLUDE_DIR}/util/encoders/url_encoder.h
 
+    ${INCLUDE_DIR}/util/int_bytes.h
     ${INCLUDE_DIR}/util/string_utils.h
     ${INCLUDE_DIR}/util/math.h
 
@@ -418,6 +419,7 @@ if(GTEST_FOUND AND GMOCK_FOUND)
         ${TEST_DIR}/util/sampling/mock_sampler.h
         ${TEST_DIR}/util/sampling/isampler.cc
         ${TEST_DIR}/util/sampling/uniform_sampler.cc
+        ${TEST_DIR}/util/int_bytes.cc
     )
 
     qt5_use_modules(run_test Core)
