--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,6 +89,7 @@ add_library(veles_base
     ${INCLUDE_DIR}/util/encoders/url_encoder.h
 
     ${INCLUDE_DIR}/util/int_bytes.h
+    ${INCLUDE_DIR}/util/edit.h
     ${INCLUDE_DIR}/util/string_utils.h
     ${INCLUDE_DIR}/util/math.h
 
@@ -111,6 +112,7 @@ add_library(veles_base
     ${SRC_DIR}/util/encoders/text_encoder.cc
     ${SRC_DIR}/util/encoders/url_encoder.cc
 
+    ${SRC_DIR}/util/edit.cc
     ${SRC_DIR}/util/string_utils.cc
     ${SRC_DIR}/util/math.cc
     ${SRC_DIR}/util/version.cc)
