--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -488,6 +488,8 @@ if(WIN32)
       "${CMAKE_CURRENT_BINARY_DIR}/prefix/bin/libzlib.dll"
       "${CMAKE_CURRENT_BINARY_DIR}/${WINDOWS_APPLICATION_OUT_DIRECTORY}"
       COMMENT "Copying zlib dll")
+  else(NOT MSVC)
+    set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "ExecWait '\\\"$INSTDIR\\\\${WINDOWS_APPLICATION_OUT_DIRECTORY}\\\\${VCREDIST_BINARY}\\\" /install /passive'")
   endif(NOT MSVC)
   set(CPACK_NSIS_EXECUTABLES_DIRECTORY ${WINDOWS_APPLICATION_OUT_DIRECTORY})
   set(CPACK_NSIS_MUI_FINISHPAGE_RUN "veles")
