Wip/altran/use ssl (#230)
* Add support for SSL in Python code

* Support SSL in C++ client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -470,7 +470,10 @@ set_target_properties(main_ui PROPERTIES OUTPUT_NAME "veles")
 if(CMAKE_HOST_UNIX AND NOT CMAKE_HOST_APPLE)
   set(CPACK_PACKAGE_CONTACT "contact@veles.io")
   set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
-  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5core5a (>= 5.5.1), libqt5gui5 (>= 5.5.1), libqt5widgets5 (>= 5.5.1), libqt5network5 (>= 5.5.1), zlib1g (>= 1:1.2.8), g++, python3 (>= 3.5.0), python3-venv (>= 3.5.0), python3-dev (>= 3.5.0), openssl (>= 1.0.0)")
+  set(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5core5a (>= 5.5.1), libqt5gui5 (>= 5.5.1),
+    libqt5widgets5 (>= 5.5.1), libqt5network5 (>= 5.5.1), zlib1g (>= 1:1.2.8), g++,
+    python3 (>= 3.5.0), python3-venv (>= 3.5.0), python3-dev (>= 3.5.0),
+    openssl (>= 1.0.0), libffi-dev, libssl-dev (>= 1.0.0)")
   install(TARGETS main_ui RUNTIME DESTINATION bin COMPONENT "application")
 
   install(FILES "${PROJECT_SOURCE_DIR}/resources/install/veles.desktop" DESTINATION share/applications/ COMPONENT "application")
