Refuse to compile on win32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,11 @@ endif(APPLE)
 
 project(VELES C CXX)
 if(WIN32)
-  cmake_minimum_required(VERSION 3.7.0)
+  if(CMAKE_GENERATOR MATCHES "Win64$")
+    cmake_minimum_required(VERSION 3.7.0)
+  else(CMAKE_GENERATOR MATCHES "Win64$")
+    message(FATAL_ERROR "Windows 32-bit is not supported due to performance problems")
+  endif(CMAKE_GENERATOR MATCHES "Win64$")
 else(WIN32)
   cmake_minimum_required(VERSION 3.1.0)
 endif(WIN32)
